pkg/lang/testdata/ub/constraints/invalid/for-each-each-binding.ub
constraints: [
  {
    kind: predicate
    @for-each: [ { @each: input.rules }, ]
    when:    true
    require: true
  },
]
